ConsultingHub/force-app/main/default/objects/Engagement_Activity__c/Engagement_Activity__c.object-meta.xml
<CustomObject>
    <description>This object contains the engagement activities tied to this specific engagement along with their statuses. At the time of engagement creation the activities get cloned here based on the engagement type.</description>
    <label>Engagement Activity</label>
    <nameField>
        <displayFormat>EA - {000000}</displayFormat>
        <label>Engagement Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>