ConsultingHub/force-app/main/default/objects/Engagement_Activity__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <referenceTo>Stage_Activity__c</referenceTo>
    <relationshipLabel>Engagement Activities</relationshipLabel>
    <relationshipName>Stage_Activity</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>