ConsultingHub/force-app/main/default/objects/Engagement_Activity__c/fields/Activity_Description__c.field-meta.xml
<CustomField>
    <fullName>Activity_Description__c</fullName>
    <formula>Activity__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Description</label>
    <type>Text</type>
</CustomField>