ConsultingHub/force-app/main/default/objects/Engagement_Activity__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <formula>TEXT( Activity__r.Domain__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domain</label>
    <type>Text</type>
</CustomField>