ConsultingHub/force-app/main/default/objects/Engagement_Activity__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <label>Engagement</label>
    <referenceTo>ia_Engagement__c</referenceTo>
    <relationshipLabel>Engagement Activities</relationshipLabel>
    <relationshipName>Engagement_Activities</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>