ConsultingHub/force-app/main/default/objects/Engagement_Activity__c/fields/Output__c.field-meta.xml
<CustomField>
    <fullName>Output__c</fullName>
    <label>Output</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>