ConsultingHub/force-app/main/default/objects/Engagement_Activity__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <formula>Activity__r.Stage__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage</label>
    <type>Text</type>
</CustomField>