ConsultingHub/force-app/main/default/objects/Engagement_Activity__c/fields/Stage_Sort_Order_Formula__c.field-meta.xml
<CustomField>
    <fullName>Stage_Sort_Order_Formula__c</fullName>
    <formula>Activity__r.Stage_Sort_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage Sort Order Formula</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>