ConsultingHub/force-app/main/default/objects/Engagement_Activity__c/fields/Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>Status_Formula__c</fullName>
    <formula>TEXT(Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Formula</label>
    <type>Text</type>
</CustomField>