ConsultingHub/force-app/main/default/objects/Engagement_Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Engagement__c</columns>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Activity_Description__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>